tested deployment to netlify

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
       <link rel="stylesheet" href="index.css">
     </head>
     <body>
-	<script src="index.js"></script>
+      <p>This is a test of the deploy</p>
+      <script src="index.js"></script>
     </body>
 </html>
 
