--- a/index.html
+++ b/index.html
@@ -19,39 +19,11 @@
         </header>
         <main>
           <div class="menu">
-            <div class="items">
-              <div class="item">
-                <div class="item-title">Pizza</div>
-                <div class="item-graphic">🍕</div>
-                <div class="item-description">pepperoni, mushroom, mozzarella</div>
-                <div class="item-price">$14</div>
-                <div class="item-add-btn">
-                  <p class="item-add-btn-text">+</p>
-                </div>
-              </div>
-              <div class="item">
-                <div class="item-title">Hamburger</div>
-                <div class="item-graphic">🍔</div>
-                <div class="item-description">beef, cheese, lettuce</div>
-                <div class="item-price">$12</div>
-                <div class="item-add-btn">
-                  <p class="item-add-btn-text">+</p>
-                </div>
-              </div>
-              <div class="item">
-                <div class="item-title">Beer</div>
-                <div class="item-graphic">🍺</div>
-                <div class="item-description">grain, hops, yeast, water</div>
-                <div class="item-price">$12</div>
-                <div class="item-add-btn">
-                  <p class="item-add-btn-text">+</p>
-                </div>
-              </div>
-            </div>
+            <div class="items" id="items"></div>
           </div>
-          <div class="checkout-section">
+          <div class="checkout-section" id="checkout-section">
             <p class="checkout-title">Your order</p>
-            <div class="checkout-items">
+            <div class="checkout-items" id="checkout-items">
               <div class="checkout-item">
                 <p class="checkout-item-name">Pizza</p>
                 <p class="remove-item-btn">remove</p>
@@ -65,14 +37,14 @@
             </div>
             <div class="checkout-total-section">
               <p class="checkout-total-heading">Total price:</p>
-              <p class="checkout-total-price">$26</p>
+              <p class="checkout-total-price" id="checkout-total-price">$26</p>
             </div>
-            <div class="purchase-btn effect-1">
-              <p class="">Complete Order</p>
+            <div class="purchase-btn effect-1" id="purchase-btn">
+              <p class="" id="purchase-btn-text">Complete Order</p>
             </div>
           </div>
-          <div class ="order-status-section">
-            <p class="order-status-message">Thanks, James! Your order is on its way!</p>
+          <div class ="order-status-section" id="order-status-section">
+            <p class="order-status-message" id="order-status-message"></p>
           </div>
           <div class="theme-switch-wrapper">
             <div class="slider-section"><label class="theme-switch" for="mode-checkbox">
@@ -85,18 +57,39 @@
           </div>
         </main>
       </div>
-      <div class="modal-container">
-        <div class="modal">
+      <div class="modal-container" id="modal-container">
+        <form action="#" class="modal" id="modal-form">
           <p class="modal-header">Enter card details</p>
-          <input type="text" class="input-box order-name" placeholder="Enter your name">
-          <input type="text" class="input-box order-card-number" placeholder="Enter card number">
-          <input type="text" class="input-box order-cvv" placeholder="Enter CVV">
-          <div class="pay-btn effect-1">
-            <p class="">Pay</p>
-          </div>
-        </div>
+          <input
+              type="text"
+              required
+              class="input-box order-name"
+              placeholder="Enter your name"
+              name="userName"
+              id="userName"
+          >
+          <input
+              type="number"
+              required
+              class="input-box order-card-number"
+              placeholder="Enter card number"
+              min="1111111111111111"
+              max="99999999999999999999"
+              name="userCc"
+              id="userCc">
+          <input
+              type="number"
+              required
+              class="input-box order-cvv"
+              placeholder="Enter CVV"
+              max="9999"
+              min="111"
+              name="userCvv"
+              id="userCvv">
+          <button class="pay-btn effect-1" id="pay-btny">Pay</button>
+        </form>
       </div>
-      <script src="index.js"></script>
+      <script src="index.js" type="module"></script>
     </body>
 </html>
 
